--- a/static/styles.css
+++ b/static/styles.css
@@ -13,9 +13,8 @@ sub{vertical-align:text-bottom;}
 input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}
 input,textarea,select{*font-size:100%;}
 legend{color:#000000;}
-.cf:before,.cf:after{content:"";display:table;}
-.cf:after{clear:both;}
-.cf{*zoom:1;}
+.cf{*zoom:1;}.cf:after{clear:both;content:"";display:table;}
+.cf:before{content:"";display:table;}
 body{font-family:'Gill Sans','Gill Sans MT','Gill Sans W01 Medium',sans-serif;background-color:#1c1c1c;color:#f2f2f2;}
 h1{font-family:Futura-Medium,Futura W01 Medium,Futura,Arial,Sans-Serif;font-size:2.5em;padding-top:15px;}
 h2{font-family:Futura-Medium,Futura W01 Medium,Futura,Arial,Sans-Serif;font-size:2em;padding-top:15px;}
@@ -26,11 +25,15 @@ a{color:#f2f2f2;text-decoration:none;}
 header{background-color:#f2f2f2;color:#1c1c1c;}header a{color:#1c1c1c;}
 footer{background-color:#f2f2f2;color:#1c1c1c;}footer a{color:#1c1c1c;}
 header div{width:960px;margin:auto;}header div h1{padding:10px;}
-footer div{*zoom:1;width:960px;margin:auto;display:block;}
+footer div{*zoom:1;width:960px;margin:auto;display:block;}footer div:after{clear:both;content:"";display:table;}
+footer div:before{content:"";display:table;}
 section#content{width:940px;padding:10px 10px 20px;margin:auto;}
+footer{*zoom:1;}footer:after{clear:both;content:"";display:table;}
+footer:before{content:"";display:table;}
 footer .about-us{float:right;width:440px;padding:10px;}
 footer .posts{float:left;width:480px;padding:10px;}
+section#content{*zoom:1;}section#content:after{clear:both;content:"";display:table;}
+section#content:before{content:"";display:table;}
 section#content .ing-fixed{position:fixed;top:10px;margin-left:640px;}
 section#content .ingredients{width:300px;float:right;}
-section#content .title{width:600px;}
-section#content .main{width:600px;}
+section#content .main{width:600px;float:left;}
