--- a/static/styles.less
+++ b/static/styles.less
@@ -69,6 +69,14 @@ a {
     text-decoration: none;
 }
 
+em {
+    font-style: italic;
+}
+
+strong {
+    font-weight: bold;
+}
+
 header {
     background-color: @off-white;
     color: @off-black;
