--- a/static/styles.css
+++ b/static/styles.css
@@ -39,4 +39,5 @@ section#content:before{content:"";display:table;}
 section#content .ing-fixed{position:fixed;top:10px;margin-left:640px;}
 section#content .ingredients{width:300px;float:right;}
 section#content .main{width:600px;float:left;}
+section#content a{text-decoration:underline;}
 .index-listing{width:600px;}
