--- a/static/styles.less
+++ b/static/styles.less
@@ -152,6 +152,10 @@ section#content {
         width: 600px;
         float: left;
     }
+
+    a {
+        text-decoration: underline;
+    }
 }
 
 // index
