--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,11 +3,14 @@
     <meta charset="utf-8">
     <title>{{ page.title }} | Bees in a Pod</title>
     <link href="/static/styles.css" rel="stylesheet" media="screen" type="text/css">
+    <link href="/static/js/image-scroller/scroller.css" rel="stylesheet" media="screen" type="text/css">
     <meta name="viewport" content="width=device-width" />  
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="/static/js/main.js"></script>
+    <script src="/static/js/image-scroller/scroller.js"></script>
 </head>
 
 <body>
@@ -39,7 +42,8 @@
                 <h4><a title="See all posts" href="/archive">See all posts</a></h4>
             </section>
         </div>
+        <h1>make footer bigger</h1>
+        <h1>make footer bigger</h1>
     </footer>
-    <script src="/static/js/main.js"></script>
 </body>
 </html>
