--- a/static/styles.css
+++ b/static/styles.css
@@ -34,10 +34,12 @@ footer{*zoom:1;}footer:after{clear:both;content:"";display:table;}
 footer:before{content:"";display:table;}
 footer .about-us{float:right;width:440px;padding:10px;}
 footer .posts{float:left;width:480px;padding:10px;}
-section#content{*zoom:1;}section#content:after{clear:both;content:"";display:table;}
+section#content{*zoom:1;position:relative;}section#content:after{clear:both;content:"";display:table;}
 section#content:before{content:"";display:table;}
 section#content .ing-fixed{position:fixed;top:10px;margin-left:640px;}
+section#content .ing-bottom{position:absolute;bottom:10px;right:10px;}
 section#content .ingredients{width:300px;float:right;}
 section#content .main{width:600px;float:left;}
 section#content a{text-decoration:underline;}
+.scroller-thumbs li{display:inline-block;width:112px;height:84px;overflow:hidden;}.scroller-thumbs li img{width:120px;}
 .index-listing{width:600px;}
