tidy up some styles

--- a/static/styles.css
+++ b/static/styles.css
@@ -41,5 +41,5 @@ section#content .ing-bottom{position:absolute;bottom:10px;right:10px;}
 section#content .ingredients{width:300px;float:right;}
 section#content .main{width:600px;float:left;}
 section#content a{text-decoration:underline;}
-.scroller-thumbs li{display:inline-block;width:112px;height:84px;overflow:hidden;}.scroller-thumbs li img{width:120px;}
+.scroller-thumbs li{display:inline-block;width:112px;height:84px;overflow:hidden;padding-right:4px;}.scroller-thumbs li img{width:120px;}
 .index-listing{width:600px;}
