--- a/static/styles.less
+++ b/static/styles.less
@@ -171,6 +171,7 @@ section#content {
     width: 112px;
     height: 84px;
     overflow: hidden;
+    padding-right: 4px;
 
     img {
         width: 120px;
