--- a/static/styles.less
+++ b/static/styles.less
@@ -181,4 +181,9 @@ section#content {
 // index
 .index-listing {
     width: 600px;
+
+    .date {
+        display: block;
+        padding-bottom: 5px;
+    }
 }
