add about page, layout for pages

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,16 +20,16 @@
         </div>
     </header>
 
-    <section id="content">
+    <div id="content">
             {{ content }}
-    </section>
+    </div>
 
     <footer>
         <div>
             <section class="about-us">
-                <h3><a title="Bees in a Pod" href="/about">About us</a></h3>
-                <p>A transatlantic partnership eating tasty, tasty food.</p>
-                <a title="Bees in a Pod" href="/about">Read more...</a>
+                <h3><a title="Bees in a Pod" href="/about.html">About us</a></h3>
+                <p>Matthew (from England) and Juliet (from America) cook and eat tasty food in Oxford</p>
+                <a title="Bees in a Pod" href="/about.html">Read more...</a>
             </section>
 
             <section class="posts">
