--- a/static/styles.css
+++ b/static/styles.css
@@ -37,7 +37,7 @@ footer .posts{float:left;width:480px;}
 article{*zoom:1;position:relative;}article:after{clear:both;content:"";display:table;}
 article:before{content:"";display:table;}
 .side-fixed{position:fixed;top:10px;margin-left:640px;}
-.side-bottom{position:absolute;bottom:10px;right:10px;}
+.side-bottom{position:absolute;bottom:10px;right:0;}
 .side{width:300px;float:right;}
 .main{width:600px;float:left;}
 .scroller-thumbs li{display:inline-block;width:112px;height:84px;overflow:hidden;padding-right:4px;}.scroller-thumbs li img{width:120px;}
