--- a/static/styles.less
+++ b/static/styles.less
@@ -145,7 +145,7 @@ article{
 .side-bottom {
     position: absolute;
     bottom: 10px;
-    right: 10px;
+    right: 0;
 }
 .side {
     width: 300px;
