--- a/static/styles.less
+++ b/static/styles.less
@@ -174,9 +174,9 @@ article{
 // index
 .index-listing {
     width: 600px;
+}
 
-    .date {
-        display: block;
-        padding-bottom: 5px;
-    }
+.post-date {
+    display: block;
+    padding-bottom: 5px;
 }
