--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -39,7 +39,7 @@
                     <li><span>{{ post.date | date_to_string }}: </span><a href="{{ post.url }}">{{ post.title }}</a></li>
                     {% endfor %}
                 </ul>
-                <h4><a title="See all posts" href="/archive">See all posts</a></h4>
+                <h4><a title="See all posts" href="/">See all posts</a></h4>
             </section>
         </div>
     </footer>
