--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,9 +27,8 @@
     <footer>
         <div>
             <section class="about-us">
-                <h3><a title="Bees in a Pod" href="/about.html">About us</a></h3>
+                <h3>About us</h3>
                 <p>Matthew (from England) and Juliet (from America) cook and eat tasty food in Oxford</p>
-                <a title="Bees in a Pod" href="/about.html">Read more...</a>
             </section>
 
             <section class="posts">
