--- a/static/styles.less
+++ b/static/styles.less
@@ -159,7 +159,7 @@ article{
 
 // img scroller
 
-.scroller-thumbs li {
+.ltl-scroller-thumbs li {
     display: inline-block;
     width: 112px;
     height: 84px;
