--- a/static/js/listToLight/ltl.css
+++ b/static/js/listToLight/ltl.css
@@ -1,4 +1,4 @@
-.modal-overlay {
+.ltl-modal-overlay {
     position: fixed;
     top: 0;  
     right: 0;  
@@ -15,7 +15,7 @@
     z-index: 50; 
 }
 
-.scroller-lightbox {
+.ltl-box {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -23,13 +23,13 @@
     z-index: 55;
 }
 
-.scroller-lightbox-close-button {
+.ltl-close-button {
     position: absolute;
     right: 0;
     top: 0;
     height: 40px;
     width: 40px;
-    background: url('/static/js/image-scroller/img/close-button.png') no-repeat;
+    background: url('img/close-button.png') no-repeat;
     opacity: 0.5;
     -moz-transition: opacity 0.5s;
     -webkit-transition: opacity 0.5s;
@@ -37,7 +37,7 @@
     transition: opacity 0.5s;
 }
 
-.scroller {
+.ltl-scroller {
     position: absolute;
     top: 50%;
     margin-top: -50px;
@@ -50,16 +50,16 @@
     transition: opacity 0.5s;
 }
 
-.scroller:hover, .scroller-lightbox-close-button:hover {
+.ltl-scroller:hover, .ltl-close-button:hover {
     opacity: 1;
 }
 
-.scroller.right {
-    background: url('/static/js/image-scroller/img/right-arrow.png') no-repeat;
+.ltl-scroller.right {
+    background: url('img/right-arrow.png') no-repeat;
     right: 0;
 }
 
-.scroller.left {
-    background: url('/static/js/image-scroller/img/left-arrow.png') no-repeat;
+.ltl-scroller.left {
+    background: url('img/left-arrow.png') no-repeat;
     left: 0;
 }
