--- a/static/js/listToLight/ltl.css
+++ b/static/js/listToLight/ltl.css
@@ -19,7 +19,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
-    padding: 0;  
+    padding: 0;
     z-index: 55;
 }
 
@@ -35,6 +35,7 @@
     -webkit-transition: opacity 0.5s;
     -o-transition: opacity 0.5s;
     transition: opacity 0.5s;
+    z-index: 66;
 }
 
 .ltl-scroller {
@@ -48,6 +49,7 @@
     -webkit-transition: opacity 0.5s;
     -o-transition: opacity 0.5s;
     transition: opacity 0.5s;
+    z-index: 66;
 }
 
 .ltl-scroller:hover, .ltl-close-button:hover {
@@ -62,4 +64,8 @@
 .ltl-scroller.left {
     background: url('img/left-arrow.png') no-repeat;
     left: 0;
+}
+
+.ltl-scroller-thumbs li {
+    cursor: pointer;
 }
